AC_INIT([cudaram], [0.0])

AC_CANONICAL_SYSTEM

AC_PREFIX_DEFAULT(/usr)

AM_INIT_AUTOMAKE()
AC_DEFINE_UNQUOTED(BUILDATE, "`date '+%D %k:%M:%S'`")

AC_PROG_CC
AC_PROG_INSTALL

AC_PROG_LIBTOOL

AC_ARG_ENABLE(debug,
        AC_HELP_STRING([--enable-debug], [Enable debug support]),
        AC_DEFINE(DEBUG)
)

AC_SUBST(KDIR)
AC_ARG_WITH(kernel,
        AC_HELP_STRING([--with-kernel=<directory>], [Location of the kernel build]),
	KDIR=$withval,
	KDIR=/lib/modules/`uname -r`/build
)

AC_SUBST(CUDA_DIR)
AC_ARG_WITH(cuda,
        AC_HELP_STRING([--with-cuda=<directory>], [Location of the cuda installation]),
	CUDA_DIR=$withval,
	CUDA_DIR=/opt/cuda/
)

AC_OUTPUT([
    Makefile
    kmod/Makefile
    cudaramd/Makefile
])
